--- a/user/css/css/dropdown.css
+++ b/user/css/css/dropdown.css
@@ -1,5 +1,5 @@
 .nav {
-    background-color: rgba(255,255,255,0.6);
+    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 20px;
 }
 
@@ -7,6 +7,7 @@
     position: relative;
     display: flex;
     justify-content: space-between;
+    transition: 0.5s all;
 }
 
 .dropdown_name {
@@ -14,12 +15,28 @@
     align-items: center;
     gap: 5px;
     font-size: 16px;
-    color: black;
+    color: #fff;
     border: none;
     padding: 14px 40px;
     border-radius: 10px;
     cursor: pointer;
+    background: linear-gradient(135deg, #ff00d2, #fed90f, #f5022a);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 300% 300%;
+    animation: gradient 4s ease-in-out infinite;
 }
+@keyframes gradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
 
 .dropdown_img {
     zoom: 100%;
