--- a/user/css/css/body.css
+++ b/user/css/css/body.css
@@ -314,7 +314,7 @@ body {
 	overflow: hidden;
 	position: relative;
 	z-index: 1;
-	width:120px;
+	width:100px;
 	transition: 0.2s ease;
 	color: black;
 	font-weight: bold;
@@ -561,4 +561,44 @@ body {
 .go-back i {
 	font-size: 30px;
 	color: #000;
+}
+
+/* Save to excel */
+.btn_save {
+	font-size: 14px;
+	padding: 2px 5px;
+	background: linear-gradient(130deg,greenyellow,pink,cyan);
+	background: rgba(0, 0, 0, 0.1);
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+	border-radius: 5px 15px ;
+	border:none;
+	font-weight: bold;
+	letter-spacing: 0.6px;
+	overflow: hidden;
+	position: relative;
+	z-index: 1;
+	width:70px;
+	transition: 0.2s ease;
+	color: black;
+	font-weight: bold;
+}
+.btn_save:active {
+	transform: scale(1.1);
+}
+.btn_save::before {
+	position: absolute;
+	content: "";
+	top:5px;
+	left: 0;
+	width: 100%;
+	height: 400%;
+	z-index: -1;
+	background: linear-gradient(130deg,greenyellow,pink,cyan);
+	border-radius: 100px;
+	animation: btn_animation2 6s linear infinite;
+}
+
+.box_btn {
+	gap: 10px;
+	display: flex;
 }
