--- a/user/css/css/dropdown.css
+++ b/user/css/css/dropdown.css
@@ -1,6 +1,63 @@
 .nav {
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.box_save {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    margin-top: 5px;
+    margin-right: 5rem;
+}
+
+.save_forecast ,
+.save_day {
+	font-size: 14px;
+	padding: 2px 5px;
+	background-color: rgba(0,0,0,0.5);
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+	border-radius: 5px 10px ;
+	border:none;
+	font-weight: bold;
+	letter-spacing: 0.6px;
+	overflow: hidden;
+	position: relative;
+	z-index: 1;
+	width:100%;
+    height: 40px;
+	transition: 0.2s ease;
+	color: #fff;
+	font-weight: bold;
+    background: linear-gradient(135deg, #ff00d2, #fed90f, #f5022a);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 300% 300%;
+    animation: gradient 4s ease-in-out infinite;
+}
+.save_forecast:active,
+.save_day:active {
+	transform: scale(1.1);
+}
+
+.save_forecast::before,
+.save_day::before {
+	position: absolute;
+	content: "";
+	top:5px;
+	left: 0;
+	width: 100%;
+	height: 400%;
+	z-index: -1;
+	border-radius: 100px;
+	animation: btn_animation2 6s linear infinite;
+}
+
+.save_forecast:hover ,
+.save_day:hover {
+    scale: 1.1;
 }
 
 .dropdown {
